Closed Bug 335985 Opened 19 years ago Closed 18 years ago

Date column in Cookies uses wacky semi-sytem date format

Categories

(Camino Graveyard :: OS Integration, defect)

PowerPC
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)

References

Details

(Keywords: fixed1.8.1.4)

Attachments

(2 files)

As Marcello pointed out in bug 244328 comment 11, the date column in the Cookies Info sheet is not using the Go menu localizable.string for date format--but it shouldn't, either. We're using the string for the Go menu because we don't want the year in the Go menu, just Day of Week, Day, and Month. Cookies sort-of obeys the locale (region) settings in the International prefPane. When my locale is USA, the cookies appear "Jan 02, 2006"; the OS "shortened" (middle) date format for the US region is "Jan 2, 2006". When I switch my locale region to France (not my OS language, just the locale region, which is independent of OS language), the cookies appear "janv. 02, 2006" while the shortened date format is "2 janv. 06". When I switch my locale region to Egypt, the cookies appear in the format "2006 ,02 يناير" while the shortened date format is "٢٠٠٦\٠١\٠٢" (visually 02/01/2006, but when read, it's 2006/01/02, which better approximates the "2006 ,02 يناير" we display. Yes, the comma is after the space :-( but that might be a weak character issue.) At first I thought we just grabbing the shortened-form month from the System Prefs, but clearly we're not grabbing that exactly, given the Egyptian (Arabic) case. Is this maybe what smfr was talking about in bug 244328 comment 14? We should either 1) fully use the "shortened" (middle) format from the System Prefs or 2) construct a *new* localizable.string to use for cookies (don't reuse the Go menu string, aka HistoryMenuDateFormat, because we want a different date format here) if we can't get suitable info from the OS (bug 244328?). Option 1 seems the most reasonable here, since that looks like the format we want to use. STR: 1. Open Camino, open Privacy Prefs, Show Cookies. 2. Close the Cookies sheet (but not the Camino prefs or Camino) 3. Switch your OS locale in the Formats tab of the Intl pane of the System Prefs (check show all regions to allow you to switch to whatever region) 4. Show Cookies again.
Doesn't matter if the language is set to French or not; the dates only change when you change the Region, regardless of OS language and whether it matches the region or not.
1.2 until we have a better grasp on this.
Keywords: intl
Target Milestone: Camino1.1 → Camino1.2
Taking; I have a patch for this (which I'll post shortly) that we can take either now or post-1.1
Assignee: nobody → stuart.morgan
Attached patch fixSplinter Review
Embeds a CFDateFormatter into our custom formatter so we get 10.3 support. I stuck the 10.4 version in a comment so that it will be easy for us to catch this in cruft cleanup whenever we drop 10.3. Note that the current implementation uses a non-localizable format string, cookie dates are more ghetto for the international version than the history stuff is.
Attachment #256480 - Flags: review?
In case anyone else is concerned about the l10n freeze: no nibs or .strings were harmed in the making of this patch.
Comment on attachment 256480 [details] [diff] [review] fix Looks good; r=me. It's nice that the memory management methods are also toll-free bridged between CF and Cocoa. Do we have a standard comment to indicate code changes which can/need to be made when we're 10.4+ only? I guess searching for "10.4+" will probably find everything.
Attachment #256480 - Flags: superreview?(mikepinkerton)
Attachment #256480 - Flags: review?
Attachment #256480 - Flags: review+
I just generally try to make sure that a search for 10.x and 10.x-1 will come up with everything relevant.
Attachment #256480 - Flags: superreview?(mikepinkerton) → superreview+
Landed on trunk and MOZILLA_1_8_BRANCH.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: intlfixed1.8.1.4
Resolution: --- → FIXED
Target Milestone: Camino1.6 → Camino1.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: