Camino only - Bug 335985: Use system format for cookie dates. r=murph sr=pink